--- a/src/main/resources/assets/reciperatings/lang/en_us.json
+++ b/src/main/resources/assets/reciperatings/lang/en_us.json
@@ -1,3 +1,14 @@
 {
-
+  "reciperatings.icons.0.title": "Sequence Break",
+  "reciperatings.icons.0.description": "§7§r",
+  "reciperatings.icons.1.title": "Builders Shortcut",
+  "reciperatings.icons.1.description": "§7§r",
+  "reciperatings.icons.4.title": "Vanilla Default",
+  "reciperatings.icons.4.description": "§7§r",
+  "reciperatings.icons.5.title": "Rat's Default",
+  "reciperatings.icons.5.description": "§7§r",
+  "reciperatings.icons.7.title": "Artisans Process",
+  "reciperatings.icons.7.description": "§7§r",
+  "reciperatings.icons.8.title": "Glorp Quest",
+  "reciperatings.icons.8.description": "§7§r"
 }
