--- a/src/main/resources/assets/reciperatings/lang/en_us.json
+++ b/src/main/resources/assets/reciperatings/lang/en_us.json
@@ -1,14 +1,14 @@
 {
   "reciperatings.icons.0.title": "Sequence Break",
-  "reciperatings.icons.0.description": "§7This recipe circumvents normal progression!\nFor if you don’t mind skipping content§r",
+  "reciperatings.icons.0.description": "§7This recipe breaks normal progression!\n\nFor if you don’t mind skipping content§r",
   "reciperatings.icons.1.title": "Builders Shortcut",
-  "reciperatings.icons.1.description": "§7Alternative, often cheaper, recipes.\nFor when you want to put your time into things other than grinding§r",
+  "reciperatings.icons.1.description": "§7Alternative, often cheaper, recipes.\n\nFor when you want to put your time into things other than grinding§r",
   "reciperatings.icons.4.title": "Vanilla Default",
   "reciperatings.icons.4.description": "§7Recipes with this rating are unchanged!§r",
   "reciperatings.icons.5.title": "Rat's Default",
-  "reciperatings.icons.5.description": "§7This recipes default has been changed.\nMostly for better integration between mods§r",
+  "reciperatings.icons.5.description": "§7This recipes default has been changed.\n\nMostly for better integration between mods§r",
   "reciperatings.icons.7.title": "Artisans Process",
-  "reciperatings.icons.7.description": "§7Alternative, often costlier, recipes.\nFor if you want an additional challenge§r",
+  "reciperatings.icons.7.description": "§7Alternative, often costlier, recipes.\n\nFor if you want an additional challenge§r",
   "reciperatings.icons.8.title": "Glorp Quest",
-  "reciperatings.icons.8.description": "§7The most, often pointlessly, convoluted recipes in the pack.\nFor automation minded players to sink their teeth into§r"
+  "reciperatings.icons.8.description": "§7The most complicated and often pointless recipes in the pack.\n\nFor automation minded players to sink their teeth into§r"
 }
